--- a/site.yml
+++ b/site.yml
@@ -66,7 +66,7 @@
         state: present
 
     - name: Ensure tomcat9 service is started
-      services:
+      service:
         name: tomcat9
         state: started
 
